--- a/_posts/2013-02-10-记忆中的年味.markdown
+++ b/_posts/2013-02-10-记忆中的年味.markdown
@@ -3,7 +3,7 @@ author: yupinglu
 comments: true
 date: 2013-02-10 13:30:44+00:00
 layout: post
-slug: '%e8%ae%b0%e5%bf%86%e4%b8%ad%e7%9a%84%e5%b9%b4%e5%91%b3'
+slug: '记忆中的年味'
 title: 记忆中的年味
 wordpress_id: 453
 categories:
@@ -14,7 +14,7 @@ tags:
 
 去年因为在海外出差没在家过年，甚是怀念亲人。今年虽然在家，但感觉过年就跟平时没什么区别。也许唯一能提醒人新的开始的就是灯笼对联和整点响起的爆竹声了。
 
-[caption id="" align="alignnone" width="623"][![年味](http://farm9.staticflickr.com/8386/8463884646_2d7f3bc1bf_z.jpg)](http://farm9.staticflickr.com/8386/8463884646_2d7f3bc1bf_z.jpg) 福[/caption]
+[![年味](http://farm9.staticflickr.com/8386/8463884646_2d7f3bc1bf_z.jpg)](http://farm9.staticflickr.com/8386/8463884646_2d7f3bc1bf_z.jpg)
 
 细想起来，小时候在何姚庄过春节应该是年味最浓的吧。那时候还是90年代，苏北仍是计划经济占主导。父亲在国营的供销社工作，其实就是在指定的国营店卖东西。虽然那时相机还未普及未能留下多少记忆，但那些景象都倒影在我的脑海里。记得，每到过年的时候，父亲店里总是挤满人买东西。在当时物资相对匮乏的年代，一个乡村只有这么一家大的市场，也就是现在的超市。每天父母从早忙到晚，我就知道年又近了。过年意味着可以有新衣服穿，可以吃一年当中很少吃到的羊肉火锅，当然也可以从大人那里得到压岁钱。过年意味着各种酒肉席，每天唱不停的黄梅戏，以及舞龙和唱凤凰。
 
