--- a/_posts/2013-05-19-青春散场_那年的我_那年的同学们.markdown
+++ b/_posts/2013-05-19-青春散场_那年的我_那年的同学们.markdown
@@ -4,8 +4,8 @@ comments: true
 date: 2013-05-19 11:26:32+00:00
 layout: post
 published: false
-slug: '%e9%9d%92%e6%98%a5%e6%95%a3%e5%9c%ba%ef%bc%9a%e9%82%a3%e5%b9%b4%e7%9a%84%e6%88%91%ef%bc%8c%e9%82%a3%e5%b9%b4%e7%9a%84%e5%90%8c%e5%ad%a6%e4%bb%ac'
-title: '青春散场：那年的我，那年的同学们 '
+slug: '青春散场：那年的我，那年的同学们'
+title: '青春散场：那年的我，那年的同学们'
 wordpress_id: 463
 categories:
 - About Me
