--- a/_posts/2012-08-06-怀念爷爷.markdown
+++ b/_posts/2012-08-06-怀念爷爷.markdown
@@ -3,7 +3,7 @@ author: yupinglu
 comments: true
 date: 2012-08-06 07:29:23+00:00
 layout: post
-slug: '%e6%80%80%e5%bf%b5%e7%88%b7%e7%88%b7'
+slug: '怀念爷爷'
 title: 怀念爷爷
 wordpress_id: 12
 categories:
