--- a/_posts/2009-07-16-关于开发的基因图谱分析系统的一些心得.markdown
+++ b/_posts/2009-07-16-关于开发的基因图谱分析系统的一些心得.markdown
@@ -3,7 +3,7 @@ author: yupinglu
 comments: true
 date: 2009-07-16 11:58:00+00:00
 layout: post
-slug: some_experience_on_the_development_of_gene_mapping_analysis_system
+slug: 关于开发的基因图谱分析系统的一些心得
 title: 关于开发的基因图谱分析系统的一些心得
 wordpress_id: 89
 categories:
@@ -22,6 +22,9 @@ tags:
 
 当我们处理的数据量大，特别是达到百万条数级别的时候，一定要注意代码的规范精简性。不然将大大降低php的运行速度。比如：
 
-（1）用i+=1代替i=i+1，既符合c/c++的习惯，效率相对还更高。（2）尽可能使用PHP内部函数。（3）能使用单引号字符串时，尽量使用单引号字符串。单引号字符串的效率要高于双引号字符串。（4）用foreach代替while遍历数组，foreach的效率明显高于while循环，而且不需要调用reset函数。
+（1）用i+=1代替i=i+1，既符合c/c++的习惯，效率相对还更高。   
+（2）尽可能使用PHP内部函数。    
+（3）能使用单引号字符串时，尽量使用单引号字符串。单引号字符串的效率要高于双引号字符串。    
+（4）用foreach代替while遍历数组，foreach的效率明显高于while循环，而且不需要调用reset函数。   
 
 还有就是将数据进行压缩或者增加缓存来提高运算速度，总之类似的方法很多，最终的目的只有一个就是提高运行速度，让用户能尽快看到结果！
