--- a/_posts/2010-04-06-想对自己说的.markdown
+++ b/_posts/2010-04-06-想对自己说的.markdown
@@ -3,8 +3,8 @@ author: yupinglu
 comments: true
 date: 2010-04-06 06:52:00+00:00
 layout: post
-slug: compared_to_its_own
-title: 相对自己说的
+slug: 想对自己说的
+title: 想对自己说的
 wordpress_id: 173
 categories:
 - 心情感悟
