--- a/_posts/2013-05-19-青春散场_那年的我_那年的同学们.markdown
+++ b/_posts/2013-05-19-青春散场_那年的我_那年的同学们.markdown
@@ -3,7 +3,6 @@ author: yupinglu
 comments: true
 date: 2013-05-19 11:26:32+00:00
 layout: post
-published: false
 slug: '青春散场：那年的我，那年的同学们'
 title: '青春散场：那年的我，那年的同学们'
 wordpress_id: 463
@@ -13,6 +12,130 @@ tags:
 - 人生
 - 大学
 ---
+
+
+很久没有写日记了，我一直觉得自己是个洒脱的人，不怎么拖泥带水。当离开校园，离开熟悉的环境的时候，才发现自己有时是很感性与怀旧的人。拥有时不觉得它美好，甚至想早点摆脱它的束缚。失去时才无时无刻不像幻灯片似的放映着生活的一幕幕，似乎那些年如在昨日。也渐渐得我习惯了写简短的日记，我怕以后等自己老了，会忘了往日的岁月。
+
+[![1](http://picplat.store.qq.com/extern_proxy/21/8a178db4-c25d-faa0-6511-0e693ed1d6c7/0)]
+ 
+以一张最后在校园拍毕业照开头，怀念曾经的我和同学们。
+
+很多人觉得大学只是学习或者玩乐的地方，4年很快就没了。我更多是觉得大学是一个群体，群体中包含着我们。我们在当中成长，改变，逐渐形成自己的世界观，人生观。与此同时，留下自己的生活印记。
+
+
+2007.10.10 军训刚完，就和舍友们开始了了解南京。也是在这一年，了解了南京的大街小巷。下面这张是舍友小光童鞋在夫子庙跟柱子交流。生活和工作的压力也许改变了我们许多，但是我们仍然可以保持一份童真，只要你坚信。在上海的小光童鞋也加油哦。
+
+http://picplat.store.qq.com/extern_proxy/21/b4e275dd-394f-e9aa-efa0-d6b28abf8a33/0
+
+
+2007.10.20 班主任老董，第一次带我们爬紫金山。作为从小在平原长大的人，没见过山也没见过海。初爬紫金山很是激动，虽然后来有听北方大妈鄙视紫金山为大土丘，与爬黄山的累远不能比。但是还是更喜欢紫金山，因为那里有我们曾经的回忆。水榭，中山陵，头陀岭。。。。
+
+
+
+2007.10.29 和舍友在玄武湖划船。还记得那天在火车站广场被切糕党拿刀逼着买切糕的，还好最后我们没买。大一的时候，还记得自己胡子还很短，不用刮。刚高考毕业，竟然在农业大学学习计算机，而且自己对这些都不懂，连简单的QQ注册都不会。想起来就是有些搞笑，当年的那些青葱岁月啊。
+
+
+
+
+2007.11.2 参加院里的演讲比赛拍的照片，那年我还没长痘痘。还有资本笑别人满目疮痍。所以说不能嘲笑别人呢，大一下学期开始，我的脸就被痘痘占领了，持续到现在。
+
+
+
+2008.4.1 参加院里组织的定向越野比赛，我们队一下子参加了两届呢。对了，又是在紫金山，还有人小鬼大的申小杰童鞋。
+
+
+
+
+
+2008.4.4 那天和舍友坐了很长时间的公交去南京大屠杀纪念馆，那时好像刚开始免费开放吧。在英文课上就读过张纯如的The rape of Nanking。希望将来能有机会亲自到她墓前献束花。
+
+
+
+2008.7.24 大学的时候是充满好奇的，总是想尝试些以前想做但未曾做过的些事，比如我的非主流发型。
+ 
+
+
+
+2008.9.1 大学里最多的活动应该就是吃饭和K歌吧，曾经多少次的通宵K歌，现在似乎还有歌声在回想。不知大行宫那个KTV还是如以前一样不？
+
+
+
+
+
+
+
+
+
+
+2009.4.2 班级活动，游栖霞。很多活动的照片都丢了，或者没有保存下来。不过和同学的回忆仍在脑海里，我会一直一直珍藏着，因为它是我的宝贵财富。
+
+
+
+2010.4.30 第一次考GRE作文前的晚上还在复习，我被他们弄得快不行了。
+
+
+
+2010.5.25 快步入大四了，又一次舍友聚餐。大家都喝得不行了，没想仅仅两年多的时间，我们都未曾料到会有这么大的变化，最厉害的还属小飞吧，都快结婚的人了。以后不能一喝点酒就不省人事了哦。
+
+
+
+
+
+
+
+
+
+2010.5.29  好像是人最全也是最后一次班级活动，游珍珠泉。我最满意的就是下面这张照片了。
+
+
+
+我的好朋友们希望大家一起努力追寻彼此的梦。
+
+
+
+
+
+
+
+
+
+
+
+
+
+2010.6.1 快GRE笔试了。有时付出不一定有回报，但不付出肯定是没有回报的。第一次申请以NEU的AD结束，作为一个穷人，什么都得靠自己，是无论如何都不能去读的。很幸运，我第二次赌赢了。
+
+
+
+
+
+2010.7.8 德基有个恐龙化石展，而且那天还有个美女在弹钢琴，还记得偷拍她被发现，好囧。舍友们，你们还记得不？
+
+
+
+2010.8.21 最后一个暑假，蹲在实验室准备我苦逼的SRT和托福。也是这个炎热的夏天，和杨扬，李梦霞，刘奇，刘腾飞，于淼同学一起在狮麟学车。很不幸，我是最苦逼的一个，花了一年多，在大学毕业后才拿到驾照。
+
+
+
+2010.10.10 第一次在南京考托福不理想，又去潍坊考了次。没想到跟它挺有缘的，我去年又去考了一次。当时是第一次出远门，我爸还怕我被人拐了呢。其实第一次总是有些担心的，习惯了就好。比如第一次离家上大学，第一次睡学生宿舍，第一次自己洗衣服，第一次出省，第一次出国。。。
+
+
+
+
+
+2010.10.19 托福考完了，要开始申请的时候，感觉考得不理想，有些颓废。
+
+
+
+2010.10.26 植保院的师兄师姐们。一直很感谢叶文武师兄和窦道龙老师。使我有机会深入的接触到科研，没想到我以后的学习也跟这段经历有关，也许这就是缘分。
+
+
+
+2011.6.1 该离校的时候了。我们也像老生一样，在大活前卖起书来。
+
+
+
+毕业是很伤感，但是也意味新的开始。特别是两年后今天再次回想当时，不知当时的我们是否曾想到现今的我们是这个样子。
 
 
 
