--- a/404.md
+++ b/404.md
@@ -1,7 +1,9 @@
 ---
 title: 404
-layout: home
+layout: page
 ---
 
-Error 404. Oops, nothing here :( 
+Error 404. Oops, nothing here :(
+
+Try something else.
 
