--- a/_posts/2013-07-07-Chengdu.markdown
+++ b/_posts/2013-07-07-Chengdu.markdown
@@ -19,21 +19,29 @@ tags:
 
 饮食：“辣”字当头，走几步就有一个火锅店。很难找到不放辣椒的菜，这几天都是边流汗边咬着牙狂吃。谁让我们是出货呢。
 
-一直想去川西看看，可惜时间太短了，希望走机会再去。
+一直想去川西看看，可惜时间太短了，希望有机会再去。
 
 ![](http://farm4.staticflickr.com/3832/9243446673_3778abeeaf_o.jpg)
+斌哥、陈哥、Me、春哥和波导
 
 ![](http://farm6.staticflickr.com/5518/9243447627_345320f5e7_o.jpg)
+斌哥、陈哥、亮哥、Me和春哥。
+
+呜呜，我的脸好大，减肥是一个长久的工程。
 
 ![](http://farm6.staticflickr.com/5452/9243452555_321728c3f8_o.jpg)
 
 ![](http://farm8.staticflickr.com/7395/9246242320_5f89ff828e_o.jpg)
+
+虽然都很辣，不过成都的没事真的挺好吃的。
 
 ![](http://farm3.staticflickr.com/2884/9243463563_02ce53e059_o.jpg)
 
 ![](http://farm3.staticflickr.com/2832/9243467271_a79408e196_o.jpg)
 
 ![](http://farm4.staticflickr.com/3671/9243469269_10a6ba6d1a_o.jpg)
+
+下面都是成都的热门景点：武侯祠、锦里、宽窄巷子。
 
 ![](http://farm4.staticflickr.com/3698/9243472239_1dab194008_o.jpg)
 
