--- a/_posts/2013-07-07-Chengdu.markdown
+++ b/_posts/2013-07-07-Chengdu.markdown
@@ -33,7 +33,7 @@ tags:
 
 ![](http://farm8.staticflickr.com/7395/9246242320_5f89ff828e_o.jpg)
 
-虽然都很辣，不过成都的没事真的挺好吃的。
+虽然都很辣，不过成都的美食真的挺好吃的。
 
 ![](http://farm3.staticflickr.com/2884/9243463563_02ce53e059_o.jpg)
 
