--- a/_posts/2013-11-12-The-Dance.markdown
+++ b/_posts/2013-11-12-The-Dance.markdown
@@ -5,8 +5,40 @@ categories: [about me]
 tags: [EmailFuture, Dream]
 ---
 
-<iframe width="560" height="420" src="http://www.youtube.com/embed/Rm1N2DBzIMQ" frameborder="0"> </iframe>
+<iframe width="560" height="420" src="http://www.youtube.com/embed/k7FRbeaXjvk" frameborder="0"> </iframe>
 
->	2年前，你申请失利，面对工作，你彷徨和不安，对于未来，有诸多不确定性。但我知道，你仍有梦想，你不想放弃。现在你开始托福和GRE了吗，你还在继续为理想奋斗还是你已经选择了放弃。我知道你不会的，因为那是你一生的理想。加油，你行的！
+Looking back on the memory of 
 
-Fortunately, I made it happen. I am on the right track to my dream. Life is full of wonders. If you believe, you can find them. 
+The dance we shared beneath the stars above 
+
+For a moment all the world was right 
+
+How could I have known you'd ever say goodbye 
+
+And now I'm glad I didn't know 
+
+The way it all would end the way it all would go 
+
+Our lives are better left to chance I could have missed the pain 
+
+But I'd of had to miss the dance 
+
+Holding you I held everything 
+
+For a moment wasn't I the king 
+
+But if I'd only known how the king would fall 
+
+Hey who's to say you know I might have changed it all 
+
+And now I'm glad I didn't know 
+
+The way it all would end the way it all would go 
+
+Our lives are better left to chance I could have missed the pain 
+
+But I'd of had to miss the dance 
+
+Yes my life is better left to chance 
+
+I could have missed the pain but I'd of had to miss the dance
