--- a/_posts/2013-11-12-The-Dance.markdown
+++ b/_posts/2013-11-12-The-Dance.markdown
@@ -8,36 +8,37 @@ tags: [EmailFuture, Dream]
 <iframe width="560" height="420" src="http://www.youtube.com/embed/k7FRbeaXjvk" frameborder="0"> </iframe>
 
 >	Looking back on the memory of 
+
 >	The dance we shared beneath the stars above 
 
-For a moment all the world was right 
+>	For a moment all the world was right 
 
-How could I have known you'd ever say goodbye 
+>	How could I have known you'd ever say goodbye 
 
-And now I'm glad I didn't know 
+>	And now I'm glad I didn't know 
 
-The way it all would end the way it all would go 
+>	The way it all would end the way it all would go 
 
-Our lives are better left to chance I could have missed the pain 
+>	Our lives are better left to chance I could have missed the pain 
 
-But I'd of had to miss the dance 
+>	But I'd of had to miss the dance 
 
-Holding you I held everything 
+>	Holding you I held everything 
 
-For a moment wasn't I the king 
+>	For a moment wasn't I the king 
 
-But if I'd only known how the king would fall 
+>	But if I'd only known how the king would fall 
 
-Hey who's to say you know I might have changed it all 
+>	Hey who's to say you know I might have changed it all 
 
-And now I'm glad I didn't know 
+>	And now I'm glad I didn't know 
 
-The way it all would end the way it all would go 
+>	The way it all would end the way it all would go 
 
-Our lives are better left to chance I could have missed the pain 
+>	Our lives are better left to chance I could have missed the pain 
 
-But I'd of had to miss the dance 
+>	But I'd of had to miss the dance 
 
-Yes my life is better left to chance 
+>	Yes my life is better left to chance 
 
-I could have missed the pain but I'd of had to miss the dance
+>	I could have missed the pain but I'd of had to miss the dance
