--- a/_posts/2013-11-12-The-Dance.markdown
+++ b/_posts/2013-11-12-The-Dance.markdown
@@ -42,3 +42,8 @@ tags: [EmailFuture, Dream]
 >	Yes my life is better left to chance 
 
 >	I could have missed the pain but I'd of had to miss the dance
+
+I repeat the song again and again. The lyric and song itself are both beautiful. I can feel the love in it.
+
+
+
