--- a/_posts/2014-01-18-SF.markdown
+++ b/_posts/2014-01-18-SF.markdown
@@ -15,69 +15,105 @@ tags:
 I have dreamed to San Francisco long ago. Diverse people, tall buildings and beautiful scenery. One pitfall is that the weather
 there is too dry for me.
 
-1. This part of pictures were taken from the flight from Dallas to SF. The wild midwest is impressive. People here changes the 
-land with great force.
 
+1. This part of pictures were taken on the flight from Dallas to SF. The wild midwest is impressive. People here changes the 
+land with great force.
 ![](http://farm8.staticflickr.com/7370/12054538166_d25eaa9f73_o.jpg)
+
 ![](http://farm3.staticflickr.com/2815/12054538936_4ed0e677ca_o.jpg)
+
 ![](http://farm4.staticflickr.com/3770/12053686475_85f850825e_o.jpg)
+
 ![](http://farm8.staticflickr.com/7452/12053985803_a92a578b5b_o.jpg)
+
 ![](http://farm8.staticflickr.com/7383/12054540306_fb91b7c05d_o.jpg)
+
 ![](http://farm6.staticflickr.com/5546/12054534686_4d82d37dd9_o.jpg)
+
 ![](http://farm6.staticflickr.com/5542/12053687785_4d58eca117_o.jpg)
+
 ![](http://farm4.staticflickr.com/3669/12054087274_7451f18a76_o.jpg)
+
 ![](http://farm6.staticflickr.com/5519/12053987683_b4d19737f2_o.jpg)
+
 
 2. Union square, Macy's.
 ![](http://farm4.staticflickr.com/3789/12054088154_5098f11517_o.jpg)
-![](http://farm3.staticflickr.com/2824/12053689975_d5a6d779f2_o.jpg)
-![](http://farm8.staticflickr.com/7349/12053690955_e2e5868559_o.jpg)
 
+![](http://farm3.staticflickr.com/2824/12053689975_d5a6d779f2_o.jpg)
+
+![](http://farm8.staticflickr.com/7349/12053690955_e2e5868559_o.jpg)
 
 
 3. The tour bus is 6 dollars.
 ![](http://farm8.staticflickr.com/7393/12053990083_e4d4e200e4_o.jpg)
+
 ![](http://farm3.staticflickr.com/2878/12053990733_5088cd2b7f_o.jpg)
+
 ![](http://farm4.staticflickr.com/3708/12053991153_766354ed9f_o.jpg)
+
 ![](http://farm4.staticflickr.com/3786/12053991533_91a0c251ec_o.jpg)
 
 
 4. San Francisco Bay. Sea is always my favorite. The Golden Gate Bridge is far away.
 ![](http://farm4.staticflickr.com/3793/12054091874_db32cd8cb5_o.jpg)
+
 ![](http://farm4.staticflickr.com/3693/12054546446_3c972dc93e_o.jpg)
+
 ![](http://farm6.staticflickr.com/5476/12053993043_885b7beeb5_o.jpg)
+
 ![](http://farm4.staticflickr.com/3796/12053993443_1743ca5abc_o.jpg)
+
 
 5. Fisherman's Wharf and Pier 39. Seagulls and Pigeons are cute. They are not afraid of people. It seems that they all are citizens of SF.
 ![](http://farm8.staticflickr.com/7346/12054547756_a9c879f8e4_o.jpg)
-![](http://farm8.staticflickr.com/7434/12054534206_3bc5d88055_o.jpg)
-![](http://farm8.staticflickr.com/7413/12054548276_9b0ff2dde1_o.jpg)
-![](http://farm6.staticflickr.com/5508/12054548926_82de98f8cd_o.jpg)
-![](http://farm4.staticflickr.com/3706/12054095334_de739a0076_o.jpg)
-![](http://farm4.staticflickr.com/3764/12054549486_1004f8cf97_o.jpg)
-![](http://farm4.staticflickr.com/3719/12054096084_b26d960eb4_o.jpg)
-![](http://farm8.staticflickr.com/7373/12053698365_391f10c980_o.jpg)
-![](http://farm4.staticflickr.com/3783/12054082774_e791e07d31_o.jpg)
-![](http://farm8.staticflickr.com/7442/12053683585_63a4da1b57_o.jpg)
 
+![](http://farm8.staticflickr.com/7434/12054534206_3bc5d88055_o.jpg)
+
+![](http://farm8.staticflickr.com/7413/12054548276_9b0ff2dde1_o.jpg)
+
+![](http://farm6.staticflickr.com/5508/12054548926_82de98f8cd_o.jpg)
+
+![](http://farm4.staticflickr.com/3706/12054095334_de739a0076_o.jpg)
+
+![](http://farm4.staticflickr.com/3764/12054549486_1004f8cf97_o.jpg)
+
+![](http://farm4.staticflickr.com/3719/12054096084_b26d960eb4_o.jpg)
+
+![](http://farm8.staticflickr.com/7373/12053698365_391f10c980_o.jpg)
+
+![](http://farm4.staticflickr.com/3783/12054082774_e791e07d31_o.jpg)
+
+![](http://farm8.staticflickr.com/7442/12053683585_63a4da1b57_o.jpg)
 
 
 6. Alcatraz Island & Performer
 ![](http://farm8.staticflickr.com/7389/12054097264_e3fd859212_o.jpg)
+
 ![](http://farm3.staticflickr.com/2828/12054098284_be178d6395_o.jpg)
+
 ![](http://farm4.staticflickr.com/3772/12054552916_fc8482347c_o.jpg)
+
 ![](http://farm6.staticflickr.com/5550/12054099204_9967d89c11_o.jpg)
+
 
 7. Sea Lions
 ![](http://farm4.staticflickr.com/3758/12054554086_33d4f4ee07_o.jpg)
+
 ![](http://farm6.staticflickr.com/5500/12054537826_3ce6edc872_o.jpg)
+
 
 8. I love this part. You can the see the tallest building Transamerica Pyramid in SF.
 ![](http://farm8.staticflickr.com/7448/12054083374_17db43edfc_o.jpg)
+
 ![](http://farm4.staticflickr.com/3752/12054083104_4a295f39d1_o.jpg)
+
 ![](http://farm4.staticflickr.com/3742/12053683035_a9379e9d70_o.jpg)
+
 ![](http://farm6.staticflickr.com/5471/12054535626_c37d897c0c_o.jpg)
+
 ![](http://farm8.staticflickr.com/7455/12054081154_fabccfdd5b_o.jpg)
+
 
 9. Many asian stores in SF. Sushi here tastes really good.
 ![](http://farm6.staticflickr.com/5544/12053979643_cd60b9d504_o.jpg)
