--- a/_posts/2014-01-18-SF.markdown
+++ b/_posts/2014-01-18-SF.markdown
@@ -16,7 +16,7 @@ I have dreamed to San Francisco long ago. Diverse people, tall buildings and bea
 there is too dry for me.
 
 
-1. This part of pictures were taken on the flight from Dallas to SF. The wild midwest is impressive. People here changes the 
+- This part of pictures were taken on the flight from Dallas to SF. The wild midwest is impressive. People here changes the 
 land with great force.
 ![](http://farm8.staticflickr.com/7370/12054538166_d25eaa9f73_o.jpg)
 
@@ -37,7 +37,7 @@ land with great force.
 ![](http://farm6.staticflickr.com/5519/12053987683_b4d19737f2_o.jpg)
 
 
-2. Union square, Macy's.
+- Union square, Macy's.
 ![](http://farm4.staticflickr.com/3789/12054088154_5098f11517_o.jpg)
 
 ![](http://farm3.staticflickr.com/2824/12053689975_d5a6d779f2_o.jpg)
@@ -45,7 +45,7 @@ land with great force.
 ![](http://farm8.staticflickr.com/7349/12053690955_e2e5868559_o.jpg)
 
 
-3. The tour bus is 6 dollars.
+- The tour bus is 6 dollars.
 ![](http://farm8.staticflickr.com/7393/12053990083_e4d4e200e4_o.jpg)
 
 ![](http://farm3.staticflickr.com/2878/12053990733_5088cd2b7f_o.jpg)
@@ -55,7 +55,7 @@ land with great force.
 ![](http://farm4.staticflickr.com/3786/12053991533_91a0c251ec_o.jpg)
 
 
-4. San Francisco Bay. Sea is always my favorite. The Golden Gate Bridge is far away.
+- San Francisco Bay. Sea is always my favorite. The Golden Gate Bridge is far away.
 ![](http://farm4.staticflickr.com/3793/12054091874_db32cd8cb5_o.jpg)
 
 ![](http://farm4.staticflickr.com/3693/12054546446_3c972dc93e_o.jpg)
@@ -65,7 +65,7 @@ land with great force.
 ![](http://farm4.staticflickr.com/3796/12053993443_1743ca5abc_o.jpg)
 
 
-5. Fisherman's Wharf and Pier 39. Seagulls and Pigeons are cute. They are not afraid of people. It seems that they all are citizens of SF.
+- Fisherman's Wharf and Pier 39. Seagulls and Pigeons are cute. They are not afraid of people. It seems that they all are citizens of SF.
 ![](http://farm8.staticflickr.com/7346/12054547756_a9c879f8e4_o.jpg)
 
 ![](http://farm8.staticflickr.com/7434/12054534206_3bc5d88055_o.jpg)
@@ -87,7 +87,7 @@ land with great force.
 ![](http://farm8.staticflickr.com/7442/12053683585_63a4da1b57_o.jpg)
 
 
-6. Alcatraz Island & Performer
+- Alcatraz Island & Performer
 ![](http://farm8.staticflickr.com/7389/12054097264_e3fd859212_o.jpg)
 
 ![](http://farm3.staticflickr.com/2828/12054098284_be178d6395_o.jpg)
@@ -97,13 +97,13 @@ land with great force.
 ![](http://farm6.staticflickr.com/5550/12054099204_9967d89c11_o.jpg)
 
 
-7. Sea Lions
+- Sea Lions
 ![](http://farm4.staticflickr.com/3758/12054554086_33d4f4ee07_o.jpg)
 
 ![](http://farm6.staticflickr.com/5500/12054537826_3ce6edc872_o.jpg)
 
 
-8. I love this part. You can the see the tallest building Transamerica Pyramid in SF.
+- I love this part. You can the see the tallest building Transamerica Pyramid in SF.
 ![](http://farm8.staticflickr.com/7448/12054083374_17db43edfc_o.jpg)
 
 ![](http://farm4.staticflickr.com/3752/12054083104_4a295f39d1_o.jpg)
@@ -115,7 +115,7 @@ land with great force.
 ![](http://farm8.staticflickr.com/7455/12054081154_fabccfdd5b_o.jpg)
 
 
-9. Many asian stores in SF. Sushi here tastes really good.
+- Many asian stores in SF. Sushi here tastes really good.
 ![](http://farm6.staticflickr.com/5544/12053979643_cd60b9d504_o.jpg)
 
 
