--- a/_posts/2014-01-18-SF.markdown
+++ b/_posts/2014-01-18-SF.markdown
@@ -16,7 +16,7 @@ I have dreamed to San Francisco long ago. Diverse people, tall buildings and bea
 there is too dry for me.
 
 
-1. This part of pictures were taken on the flight from Dallas to SF. The wild midwest is impressive. People here changes the 
+- This part of pictures were taken on the flight from Dallas to SF. The wild midwest is impressive. People here changes the 
 land with great force.
 ![](http://farm8.staticflickr.com/7370/12054538166_d25eaa9f73_o.jpg)
 
@@ -37,7 +37,7 @@ land with great force.
 ![](http://farm6.staticflickr.com/5519/12053987683_b4d19737f2_o.jpg)
 
 
-2. Union square, Macy's.
+- Union square, Macy's.
 ![](http://farm4.staticflickr.com/3789/12054088154_5098f11517_o.jpg)
 
 ![](http://farm3.staticflickr.com/2824/12053689975_d5a6d779f2_o.jpg)
