--- a/_posts/2014-04-14-Sorry.markdown
+++ b/_posts/2014-04-14-Sorry.markdown
@@ -5,10 +5,6 @@ categories: [life]
 tags: [人生]
 ---
 
-我觉得来美最对不起的就是父母了。昨晚打电话回去，一直没人接。好不容易打通，母亲说父亲出车祸了。还好，人没事，只是脚伤得比较重。
-母亲说邻居叫他说父亲出车祸的时候，她人都吓傻了，不知怎么办才好。想着母亲那时应该很无助，要是我在家就好了，可惜我在万里外的美国。
-母亲说父亲还让他不要告诉我的，深怕我担心，父亲啊父亲。母亲最近挺不容易的，慢性肠胃炎，胃口一直不好。外婆癌症晚期，她要忙里忙外。
-奶奶现在不能自己做饭了，她时不时还要照顾奶奶。现在父亲又躺在了病床上，她说病房都是打呼噜和小孩子的哭声，她晚上都很难睡着。对不起，
-母亲，不能在你们身边。
+我觉得来美最对不起的就是父母了。昨晚打电话回去，一直没人接。好不容易打通，母亲说父亲出车祸了。还好，人没事，只是脚伤得比较重。母亲说邻居叫他说父亲出车祸的时候，她人都吓傻了，不知怎么办才好。想着母亲那时应该很无助，要是我在家就好了，可惜我在万里外的美国。母亲说父亲还让他不要告诉我的，深怕我担心，父亲啊父亲。母亲最近挺不容易的，慢性肠胃炎，胃口一直不好。外婆癌症晚期，她要忙里忙外。奶奶现在不能自己做饭了，她时不时还要照顾奶奶。现在父亲又躺在了病床上，她说病房都是打呼噜和小孩子的哭声，她晚上都很难睡着。对不起，母亲，不能在你们身边。
 
 生活有太多的不易，我们谁都不知道下一秒将要发生什么。Pray and hope for the best.
